# stream_view

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE
aview/: .clang-format  aview.sln
aview/aview/: aview.vcxproj  aview.vcxproj.filters
cmake/: .gitignore  stream_view_generator.cmake
cmake/templates/: stream_view-config.template.cmake
include/stream_view/: accumulators.h  concepts.h  functional.h  interface.h  links.h  macros.h  operators.h  stream_view.h  utility.h
include/stream_view/accumulators/: duration_window.h  fixed_window.h  ordered.h  sum.h  window.h
tests/: generated_code.cpp  stream_view.cpp
